--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <title>React App</title>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" />
       <link rel="stylesheet" href="styles.css" /> 
+      <script src="https://kit.fontawesome.com/963a5978f1.js" crossorigin="anonymous"></script>
     
   </head>
   <body>
